Fix for bug 146966 (Standalone Transformiix outputs HTML with XML prolog). r=Pike, sr=jst.